<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/lets_chat"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:background="@drawable/edit_bg"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:background="@drawable/edit_bg"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>



    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:background="@drawable/edit_bg"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <Button
        android:id="@+id/btn_signUp2ndpage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>